--- a/src/app/components/barra-busqueda/barra-busqueda.component.html
+++ b/src/app/components/barra-busqueda/barra-busqueda.component.html
@@ -1,1 +1,2 @@
-<p>barra-busqueda works!</p>
+<h3>Inmobiliapp</h3>
+<input id="typeahead-basic" type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search"/>
