--- a/src/app/components/barra-busqueda/barra-busqueda.component.html
+++ b/src/app/components/barra-busqueda/barra-busqueda.component.html
@@ -1,2 +1,3 @@
 <h3>Inmobiliapp</h3>
-<input id="typeahead-basic" type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search"/>
+<input id="typeahead-basic" type="text" class="form-control" [(ngModel)]="textoIngresado" [ngbTypeahead]="search"/>
+<label class="btn btn-outline-primary" for="btnradio2" (click)="onClick()">Buscar</label>
