Listado  resultados de la busqueda

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <app-barra-busqueda (resultados)="guardarResultados($event)"></app-barra-busqueda>
+<app-lista-arrendatarios [resultados]="arrResultados"></app-lista-arrendatarios>
